--- a/App.config
+++ b/App.config
@@ -5,7 +5,8 @@
     </startup>
   <appSettings>
     <add key="BaseUrl" value="https://opensea.io" />
-    <add key="CollectionPath" value="/wallet/locked?referrer=%2Fcollection%2Flama-fashion-club-winter-edition-nft%2Fassets%2Fcreate%3Fmedia%3D%26name%3D%26external_link%3D%26description%3D%26slug%3Dlama-fashion-club-winter-edition" />
+    <add key="CollectionPath" value="/wallet/locked?referrer=%2Fcollection%2F{0}%2Fassets%2Fcreate%3Fmedia%3D%26name%3D%26external_link%3D%26description%3D%26slug%3D{0}" />
+    <add key="CollectionSlug" value="lama-fashion-club-winter-edition-nft" />
     <add key="walletPassword" value="MetaMaskWalletPassword" />
     <add key="BaseFilePath" value="C:\Work\My\AutomatedNFTUploader\nft" />
     <add key="ChromeProfileDir" value="C:\\Chrome_Profiles\\Profile 1" />
